define_module(sopnet            BINARY SOURCES sopnet.cpp            LINKS allsopnet)
define_module(graphcut          BINARY SOURCES graphcut.cpp          LINKS imageprocessing)
define_module(watershed         BINARY SOURCES watershed.cpp         LINKS imageprocessing)
define_module(problemdump       BINARY SOURCES problemdump.cpp       LINKS allsopnet)
define_module(solve_subproblems BINARY SOURCES solve_subproblems.cpp LINKS allsopnet)
define_module(splitmerge        BINARY SOURCES splitmerge.cpp        LINKS allsopnet)
define_module(median_filter     BINARY SOURCES median_filter.cpp     LINKS imageprocessing gui)
define_module(edit_distance     BINARY SOURCES edit_distance.cpp     LINKS allsopnet)
define_module(grow              BINARY SOURCES grow.cpp              LINKS imageprocessing gui)
define_module(shrink            BINARY SOURCES shrink.cpp            LINKS imageprocessing gui)
define_module(viewer            BINARY SOURCES viewer.cpp            LINKS imageprocessing gui)
define_module(skeletonize       BINARY SOURCES skeletonize.cpp       LINKS allsopnet)
define_module(marching_cubes    BINARY SOURCES marching_cubes.cpp    LINKS allsopnet)
define_module(blobs             BINARY SOURCES blobs.cpp             LINKS allsopnet)
define_module(create_cost_function BINARY SOURCES create_cost_function.cpp LINKS allsopnet)
define_module(create_ted_conditions BINARY SOURCES create_ted_conditions.cpp LINKS allsopnet)
define_module(create_svm_training_data BINARY SOURCES create_svm_training_data.cpp LINKS allsopnet)
define_module(ted_linear_regression BINARY SOURCES ted_linear_regression.cpp LINKS allsopnet)
define_module(create_weightvector_from_SvmOutput BINARY SOURCES create_weightvector_from_SvmOutput.cpp LINKS allsopnet)

add_subdirectory(tests)
